* 2018.11.27 - [FGG] added soft,package and program for FAI-PEP
             - [FGG] added basic workflow for MLPerf SyLT
