@@ -1,0 +1,34 @@
+{
+  "customize": {
+    "extra_dir": "", 
+    "git_src_dir": "src", 
+    "install_env": {
+      "PACKAGE_AUTOGEN": "NO", 
+      "PACKAGE_GIT": "YES", 
+      "PACKAGE_SKIP_LINUX_MAKE": "YES", 
+      "PACKAGE_SUB_DIR": "src", 
+      "PACKAGE_SUB_DIR1": "src", 
+      "PACKAGE_URL": "https://github.com/rai-project/mlmodelscope"
+    }, 
+    "use_git_revision": "yes", 
+    "version": "master"
+  }, 
+  "end_full_path_universal": "src$#sep#$package.json", 
+  "need_cpu_info": "no", 
+  "only_for_host_os_tags": [
+    "linux", 
+    "windows"
+  ], 
+  "package_extra_name": "", 
+  "process_script": "install", 
+  "soft_uoa": "bd45429bee5fd779", 
+  "suggested_path": "bench-mlmodelscope", 
+  "tags": [
+    "bench", 
+    "mlmodelscope" 
+  ], 
+  "use_scripts_from_another_entry": {
+    "data_uoa": "cd9ccc74060b3d18", 
+    "module_uoa": "script"
+  }
+}
