@@ -1,0 +1,1 @@
+https://github.com/rai-project/mlmodelscope
