@@ -1,0 +1,16 @@
+{
+  "backup_data_uid": "bd45429bee5fd779", 
+  "backup_module_uid": "5e1100048ab875d7", 
+  "backup_module_uoa": "soft", 
+  "control": {
+    "engine": "CK", 
+    "iso_datetime": "2018-11-27T14:22:19.805815", 
+    "version": [
+      "1", 
+      "9", 
+      "6", 
+      "1"
+    ]
+  }, 
+  "data_name": "bench.mlmodelscope"
+}
