@@ -1,0 +1,18 @@
+{
+  "auto_detect": "no", 
+  "customize": {
+    "check_that_exists": "yes", 
+    "ck_version": 10, 
+    "env_prefix": "CK_ENV_BENCH_MLMODELSCOPE", 
+    "limit_recursion_dir_search": {
+      "linux": 4, 
+      "win": 4
+    }, 
+    "soft_file_universal": "?"
+  }, 
+  "soft_name": "MLModelScope", 
+  "tags": [
+    "bench", 
+    "mlmodelscope" 
+  ]
+}
