@@ -1,3 +1,4 @@
 * 2018.11.27 - [FGG] added soft,package and program for FAI-PEP
              - [FGG] added basic workflow for MLPerf SyLT
+             - [FGG] added soft and package for MLModelScope
 
